fix: overflow

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   margin: 0 auto;
   width: 100%;
   max-width: 1000px;
+  overflow-x: hidden;
 }
 a {
   text-decoration: none;
